--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Yatra One', cursive;
+  background-color: #2c2f33;
 }
 
 a {
@@ -11,10 +11,10 @@ a {
   text-decoration: none;
 }
 a:hover {
-  background-color: yellow;
+  background-color: brown;
 }
 a:focus {
-  background-color: orange;
+  background-color: maroon;
 }
 * {
   box-sizing: border-box;
@@ -24,4 +24,5 @@ a:focus {
   border: 0.05rem solid grey;
   margin: 1rem;
   padding: 0.25rem;
+  background-color: #7289da;
 }
