--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Yatra One', cursive;
+  font-family: "Yatra One", cursive;
   background-color: #2c2f33;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 a:hover {
   background-color: brown;
